tests/snapshots/cli_parse__parse_fails_onboard_missing_output_target.snap
---
source: tests/cli_parse.rs
assertion_line: 975
expression: error.to_string()
---
error: the following required arguments were not provided:
  <--path <PATH>|--stdout>

Usage: psonoci onboard <--path <PATH>|--stdout>

For more information, try '--help'.
