tests/snapshots/cli_parse__parse_fails_onboard_overwrite_with_stdout.snap
---
source: tests/cli_parse.rs
assertion_line: 1061
expression: error.to_string()
---
error: the argument '--stdout' cannot be used with '--overwrite'

Usage: psonoci onboard <--path <PATH>|--stdout>

For more information, try '--help'.
