tests/snapshots/cli_parse__parse_onboard_without_server_url.snap
---
source: tests/cli_parse.rs
assertion_line: 566
expression: "&opt"
---
{
  "command": {
    "Onboard": {
      "path": null,
      "stdout": true,
      "plain": false,
      "format": "toml",
      "polling_timeout": 60,
      "polling_interval": 3,
      "overwrite": false
    }
  },
  "raw_config": {
    "psono_settings": {
      "api_key_id": null,
      "api_secret_key_hex": null,
      "server_url": null
    },
    "http_options": {
      "timeout": 60,
      "max_redirects": 0,
      "use_native_tls": false,
      "danger_disable_tls_verification": false,
      "der_root_certificate_path": null,
      "pem_root_certificate_path": null
    },
    "config_packed": null,
    "config_path": null
  }
}
